<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_profile">
        <EditTextPreference
            android:key="prefUsername"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_user_name" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_update_setting">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" />

        <ListPreference
            android:entries="@array/languangeArray"
            android:entryValues="@array/languangeValues"
            android:key="prefAppLanguage"
            android:summary="App language summary"
            android:title="@string/pref_sync_language" />

        <SeekBarPreference
            android:key="distanceInterval"
            android:title="Gps Distance interval"
            android:summary="Summary."
            android:max="100"
            android:min="30"
            android:progress="10"
            android:defaultValue="100" />

        <SeekBarPreference
            android:key="timeInterval"
            android:title="Gps Time interval"
            android:summary="Summary."
            android:max="900"
            android:min="300"
            android:progress="100"
            android:defaultValue="450" />
    </PreferenceCategory>

</PreferenceScreen>
