<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/home" />
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/Info"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/info" />
        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/Logout"
            android:icon="@drawable/ic_exit_to_app_black_48dp"
            android:title="@string/logout" />
    </group>

</menu>
