<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.musedroid.musedroid.ShowActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/MuseumDescription"
        android:layout_width="0dp"
        android:layout_height="216dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/museumdescription"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="236dp"
        android:layout_height="57dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/qrButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/qrButton"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginBottom="14dp"
        android:text="@string/scan_exhibit"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintLeft_toLeftOf="@+id/button3"
        app:layout_constraintRight_toRightOf="@+id/button3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="118dp"
        android:layout_height="0dp"
        android:layout_marginBottom="77dp"
        android:text="@string/nfc_exhibit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/goToMaps"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="11dp"
        android:text="@string/gotomaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
